--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
   {% include head.html %}
 
@@ -7,7 +7,7 @@
 
     {% include header.html %}
 
-    <div class="page-content">
+    <section class="main-content">
       <div class="wrapper">
         {{ content }}
       </div>
@@ -15,6 +15,12 @@
 
     {% include footer.html %}
 
+
+    <script id="dsq-count-scr" src="//mattbashtonsblog.disqus.com/count.js" async></script>
+
+  
   </body>
+
+    {% include scripts.html %}
 
 </html>
