--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -34,6 +34,6 @@ layout: default
 
   </div>
 
-<a href="{{ site.url }}{{ site.baseurl }}"><h3 style="text-align: center;">- to blog -</h3></a>
+<a href="{{ site.url }}{{ site.baseurl }}"><h3 style="text-align: center;">- home -</h3></a>
 
 </article>
