added feed and updated name

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -34,7 +34,7 @@
   </div>
   <div id="index">
 
-    Welcome to my blog, should you be interested <a href="feed.xml">a feed of post is available here</a> 
+  <p>Welcome to my blog, <a href="feed.xml">an XML feed is also available here</a> </p>
 
     <h3><a href="{{ site.url}}/posts/">Most Recent Posts</a></h3>
     {% for post in site.posts limit:5 %}
