updated home page

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -34,7 +34,9 @@
   </div>
   <div id="index">
 
-  <p>Welcome to my blog, <a href="feed.xml">an XML feed is also available here</a> </p>
+  <p>Welcome to my tech blog, a place where I can write about my experience learning development and data analysis skills in Go, R and any other language that takes my fancy.</p>
+
+    <p><a href="feed.xml">Should you be interested, an XML feed is available, just click here</a> </p>
 
     <h3><a href="{{ site.url}}/posts/">Most Recent Posts</a></h3>
     {% for post in site.posts limit:5 %}
