--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -39,11 +39,12 @@
   #intro a:visited{ color:#330033; }
   #intro a:hover{ color:#942A5F; }
   #intro a:active{ color:#6FB25C}
+  #intro p {@include font-rem(14)}
   </style>
     <div id="intro">
       <p>Welcome to my tech blog, a place where I can write about my experience learning development and data analysis skills in Go, R and any other language that takes my fancy.</p>
-      <p><a href="feed.xml">Should you be interested, an XML feed is available, just click here</a> </p>
-    </div>
+      <p><a href="feed.xml">Should you be interested, an XML feed is available</a> </p>
+    </di  v>
 
     <h3><a href="{{ site.url}}/posts/">Most Recent Posts</a></h3>
     {% for post in site.posts limit:5 %}
