--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -43,7 +43,7 @@
   </style>
     <div id="intro">
       <p>Welcome to my tech blog, a place where I can write about my experience learning development and data analysis skills in Go, R and any other language that takes my fancy.</p>
-      <p><a href="feed.xml">Should you be interested, an XML feed is available</a> </p>
+      <p><a href="feed.xml">Should you be interested, an XML feed is also available</a> </p>
     </di  v>
 
     <h3><a href="{{ site.url}}/posts/">Most Recent Posts</a></h3>
