images getting squished because 100%, use px instead

--- a/_sass/page.scss
+++ b/_sass/page.scss
@@ -315,7 +315,7 @@ $button-size: 1.5rem;
 		}
 	}
 	img {
-		width: 100%;
+		width: 1900px;
 		height: 150px;
 		-ms-interpolation-mode: bicubic;
 	}
