--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -42,7 +42,8 @@
   #intro p {@include font-rem(14)}
   </style>
     <div id="intro">
-      <p>Welcome to my tech blog, a place where I can write about my experience learning development and data analysis skills in Go, R and any other language that takes my fancy.</p>
+      <p>Welcome to my dev blog, a place where I can write about my experiences with code (mostly Go and R).</p>
+      <p>I also have a <a href="http://testingfuntime.blogspot.co.uk/">testing blog</a>, where I write about testing software.
       <p><a href="feed.xml">Should you be interested, an XML feed is also available</a> </p>
     </div>
 
