--- a/_sass/page.scss
+++ b/_sass/page.scss
@@ -289,9 +289,17 @@ $button-size: 1.5rem;
 	}
 }
 
+<style type="text/css">
+.image-wrap{
+
+}
+
 /* Large feature header image */
 .image-wrap {
 	position: relative;
+	background-color: green;
+	width: 1900px;
+	height: 150px;
 	margin-bottom: 2em;
 	@include clearfix;
 	&:after {
@@ -317,6 +325,7 @@ $button-size: 1.5rem;
 	img {
 		width: 1900px;
 		height: 150px;
+		background-color: blue;
 		-ms-interpolation-mode: bicubic;
 	}
 	.headline-wrap {
