--- a/_sass/page.scss
+++ b/_sass/page.scss
@@ -293,8 +293,7 @@ $button-size: 1.5rem;
 /* Large feature header image */
 .image-wrap {
 	position: relative;
-	background-image: url("/images/sample-image-1.jpg")
-  background-color: blue;
+	background-image: url("/images/bg7.png");
 	width: 1900px;
 	height: 150px;
 	margin-bottom: 2em;
