--- a/_layouts/post-index.html
+++ b/_layouts/post-index.html
@@ -15,7 +15,8 @@
 
 {% if page.image.feature %}
   <div class="image-wrap">
-  <img src=
+
+<!--  <img src=
     {% if page.image.feature contains 'http' %}
       "{{ page.image.feature }}"
     {% else %}
@@ -24,8 +25,8 @@
   alt="{{ page.title }} feature image">
   {% if page.image.credit %}
     <span class="image-credit">Photo Credit: <a href="{{ page.image.creditlink }}">{{ page.image.credit }}</a></span>
-  {% endif %}
-  </div><!-- /.image-wrap -->
+  {% endif %} -->
+  </div> <!-- /.image-wrap -->
 {% endif %}
 
 <div id="main" role="main">
@@ -35,7 +36,7 @@
   <div id="index">
     <h1>{{ page.title }}</h1>
     {% capture written_year %}'None'{% endcapture %}
-    {% for post in site.posts %}  
+    {% for post in site.posts %}
       {% capture year %}{{ post.date | date: '%Y' }}{% endcapture %}
       {% if year != written_year %}
         <h3>{{ year }}</h3>
