--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,7 +15,8 @@
 
 {% if page.image.feature %}
   <div class="image-wrap">
-  <img src=
+
+<!--  <img src=
     {% if page.image.feature contains 'http' %}
       "{{ page.image.feature }}"
     {% else %}
@@ -24,8 +25,8 @@
   alt="{{ page.title }} feature image">
   {% if page.image.credit %}
     <span class="image-credit">Photo Credit: <a href="{{ page.image.creditlink }}">{{ page.image.credit }}</a></span>
-  {% endif %}
-  </div><!-- /.image-wrap -->
+  {% endif %} -->
+  </div> <!-- /.image-wrap -->
 {% endif %}
 
 <div id="main" role="main">
