--- a/_sass/page.scss
+++ b/_sass/page.scss
@@ -293,8 +293,8 @@ $button-size: 1.5rem;
 /* Large feature header image */
 .image-wrap {
 	position: relative;
-	background-image: url("/images/bg7.png");
-	width: 1900px;
+	background-image: url("/images/bg9.png");
+	width: 100%;
 	height: 150px;
 	margin-bottom: 2em;
 	@include clearfix;
