--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -27,3 +27,7 @@ sitemap: false
 @import "vendor/magnific-popup/magnific-popup";
 //@import "vendor/google/fonts";
 @import "print";
+
+p {
+   margin: 0 0 3rem;
+}
