--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -43,12 +43,10 @@
   #intro p {@include font-rem(14)}
   </style>
     <div id="intro">
+      <p>My name is Rosie and I work as a Senior Test Engineer. This is my github blog.</p> 
       <p>I believe that the ability to write code strenghens software testing skills. In my experience, I've found that it's easier to test an API when you know how to build an API.</p>
-      <br>
       <p> However, sadly, not all software testers are interested in writing code. This is why I have created this blog, as a place where I can write about my experiences with code (mostly Go and R).</p>
-      <br>
       <p> I also have a <a href="http://testingfuntime.blogspot.co.uk/">testing blog</a>, where I write about testing software with fewer posts about writing code.</p>
-      <br>
       <p><a href="feed.xml">Should you be interested, an XML feed is also available</a> </p>
     </div>
 
