--- a/_sass/page.scss
+++ b/_sass/page.scss
@@ -460,8 +460,9 @@ $button-size: 1.5rem;
 	p > em > a,
 	p > strong > a,
 	li > a {
-		text-decoration: underline;
+		color:#942A5F;
 	}
+	
 }
 
 /* Table of contents */
