a long overdue update

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -45,11 +45,11 @@
   #intro p {@include font-rem(14)}
   </style>
     <div id="intro">
-      <p>My name is Rosie and I work as a Senior Test Engineer. This is my github blog.</p>
-      <p>I believe that the ability to write code strenghens software testing skills. In my experience, I've found that it's easier to test an API when you know how to build an API.</p>
-      <p> However, sadly, not all software testers are interested in writing code. This is why I have created this blog, as a place where I can write about my experiences with code (mostly Go and R).</p>
-      <p> I also have a <a href="http://testingfuntime.blogspot.co.uk/">testing blog</a>, where I write about testing software with fewer posts about writing code.</p>
-      <p><a href="feed.xml">Should you be interested, an XML feed is also available</a> </p>
+      <p>My name is Rosie and I work as a Software Developer, this is my blog.</p>
+      <p>I am passionate about developing with Go, collaborating with other people and sharing experiences. </p>
+      <p>I have worked within software teams for a _long_ time. I started out as a Games Tester in 2005 then moved on to testing business software in 2014. By 2017 I had a number of talks accepted and started speaking internationally at large software testing conferences. At the start of 2018 I accepted my first job as a Software Developer. </p>
+      <p>It's a tough, but it's also made me tough. I know this is what I want to do with my life, I like proving people wrong and succeeding against difficult odds. I am grateful to be part of an amazing community of Go developers and for all the friends I have made along the way.</p>
+      <p> I also have a <a href="http://testingfuntime.blogspot.co.uk/">testing blog</a>, where I used to write quite a bit about testing software.</p>
     </div>
 
     <h3><a href="{{ site.url}}/posts/">Most Recent Posts</a></h3>
